:hammer: Perbaikan fitur nav

--- a/diagnosa.html
+++ b/diagnosa.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body style="padding-bottom: 80px; background-color: #f8f9fa;">
+    <script src="js/components.js"></script>
 
     <div class="container mt-4">
         
