--- a/jadwal.html
+++ b/jadwal.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/components.js"></script>
     <div class="container mt-3 mb-5 pb-5">
         <div id="weather-widget" class="card border-0 shadow-sm text-white mb-4 overflow-hidden" 
              style="background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%); min-height: 180px;">
