--- a/profil.html
+++ b/profil.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body style="padding-bottom: 70px;">
-
+<script src="js/components.js"></script>
     <div class="container mt-4">
         <div class="card p-4 shadow-sm border-0 text-center mb-4 bg-white rounded-4">
             <div class="mb-3 position-relative d-inline-block">
