--- a/profil.html
+++ b/profil.html
@@ -3,53 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil - Si Tani</title>
+    <title>Profil Saya - Si Tani</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="padding-bottom: 70px;">
-<script src="js/components.js"></script>
-    <div class="container mt-4">
-        <div class="card p-4 shadow-sm border-0 text-center mb-4 bg-white rounded-4">
-            <div class="mb-3 position-relative d-inline-block">
-                <img src="" class="rounded-circle border border-3 border-success p-1" id="avatar-img" width="100" height="100">
-                <span class="position-absolute bottom-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
-                    <span class="visually-hidden">Online</span>
-                </span>
+<body>
+
+    <script src="js/components.js"></script>
+
+    <div class="container pb-5 mb-5 mt-3">
+        
+        <div class="card border-0 shadow-sm mb-4" style="border-radius: 16px; background: linear-gradient(135deg, #198754, #28a745); color: white;">
+            <div class="card-body p-4 d-flex align-items-center">
+                <div class="bg-white text-success rounded-circle d-flex justify-content-center align-items-center fw-bold shadow-sm" style="width: 70px; height: 70px; font-size: 2rem;" id="profil-inisial">
+                    S
+                </div>
+                <div class="ms-3">
+                    <h5 class="fw-bold mb-1" id="profil-nama">Nama Pengguna</h5>
+                    <small class="opacity-75 d-block mb-1">@<span id="profil-username">username</span></small>
+                    <span class="badge bg-light text-success rounded-pill px-3" id="profil-role">Role Pengguna</span>
+                </div>
             </div>
-            <h4 id="nama-user" class="fw-bold mb-1">...</h4>
-            <span class="badge bg-success bg-opacity-10 text-success rounded-pill px-3">Petani Modern</span>
         </div>
 
-        <h6 class="fw-bold text-muted ms-1 mb-3">Pengaturan</h6>
-        <div class="list-group shadow-sm border-0 rounded-4 overflow-hidden mb-3">
-            <button class="list-group-item list-group-item-action d-flex justify-content-between align-items-center p-3 border-0 border-bottom">
-                <div>
-                    <span>📱</span> <span class="ms-2">Versi Aplikasi</span>
-                </div>
-                <span class="text-muted small">v1.2 (Multi-Plant)</span>
-            </button>
-            <button class="list-group-item list-group-item-action d-flex justify-content-between align-items-center p-3 border-0">
-                <div>
-                    <span>☁️</span> <span class="ms-2">Status Database</span>
-                </div>
-                <span class="text-success small fw-bold">Terhubung</span>
+        <div class="d-flex justify-content-between align-items-end mb-3">
+            <h5 class="fw-bold text-success mb-0">Riwayat Belanja 📦</h5>
+        </div>
+
+        <div class="row g-3" id="pesanan-list">
+            <div class="col-12 text-center p-5">
+                <div class="spinner-border text-success" role="status"></div>
+                <p class="text-muted mt-2 small fw-bold">Memuat pesanan...</p>
+            </div>
+        </div>
+
+        <div class="mt-5 text-center">
+            <button class="btn btn-outline-danger px-5 rounded-pill fw-bold shadow-sm" id="btn-logout">
+                Keluar (Logout)
             </button>
         </div>
 
-        <button onclick="logout()" class="btn btn-outline-danger w-100 py-2 rounded-3 fw-bold">
-            🚪 Keluar Akun
-        </button>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/components.js"></script> <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const user = localStorage.getItem('user_si_tani');
-            document.getElementById('nama-user').innerText = user;
-            // Pakai layanan avatar UI Avatars biar keren
-            document.getElementById('avatar-img').src = `https://ui-avatars.com/api/?name=${user}&background=2E8B57&color=fff&size=128&bold=true`;
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script type="module" src="js/profil.js"></script>
+
 </body>
 </html>
