:hammer: Last penambahan Beranda dan Fitur filtering Tokok

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             localStorage.setItem('roleUser', hasil.role);
 
                             alert("✅ Selamat datang, " + hasil.user + "!");
-                            window.location.href = "diagnosa.html"; 
+                            window.location.href = "beranda.html"; 
                         } else {
                             alert("❌ Gagal: " + hasil.pesan);
                         }
